# nix-disk-manager

./: .gitignore  flake.nix  meson.build  package.nix
data/: meson.build  nix-disk-manager.desktop.in  nix-disk-manager.gresource.xml  org.glfos.nixdiskmanager.in
data/icons/: meson.build
data/ui/: disk.blp  disks.blp  manage_disk.blp  manage_disk_add_mount_row.blp  manage_disk_mount_expander.blp  manage_disk_mount_row.blp  meson.build  save_dialog.blp  welcome_dialog.blp  window.blp
data/ui/widgets/: disk.blp  disks.blp
nixdiskmanager/: constants.py.in  main.py  meson.build  nix-disk-manager.in
nixdiskmanager/cli/: cli.py  meson.build
nixdiskmanager/dialogs/: manage_disk.py  manage_disk_add_mount_row.py  manage_disk_mount_expander.py  manage_disk_mount_row.py  meson.build  save_dialog.py  welcome_dialog.py
nixdiskmanager/utils/: disk.py  disk_parser.py  disk_writer.py  meson.build  partition.py  size_parser.py
nixdiskmanager/views/: main_window.py  meson.build
nixdiskmanager/widgets/: disk.py  disks.py  meson.build
po/: POTFILES  en.po  fr.po
src/: main.py
src/utils/: proc_parser.py
src/views/: main_window.py
src/widgets/: disk.py  disks.py
