icondir = datadir / 'icons' / 'hicolor'

install_data('nix-disk-manager-16x16.png', install_dir: icondir / '16x16' / 'apps', rename: 'nix-disk-manager.png')
install_data('nix-disk-manager-32x32.png', install_dir: icondir / '32x32' / 'apps', rename: 'nix-disk-manager.png')
install_data('nix-disk-manager-48x48.png', install_dir: icondir / '48x48' / 'apps', rename: 'nix-disk-manager.png')
install_data('nix-disk-manager-64x64.png', install_dir: icondir / '64x64' / 'apps', rename: 'nix-disk-manager.png')
install_data('nix-disk-manager-128x128.png', install_dir: icondir / '128x128' / 'apps', rename: 'nix-disk-manager.png')
install_data('nix-disk-manager-128x128.png', install_dir: pkgdatadir, rename: 'logo.png')
